k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vectorsphere
  labels:
    name: vectorsphere
